public/styles/styles.css
/* css reset */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

*:focus{
   outline: none;
}

/* ! ****************************** */
/* ! CUSTOM PROPERITES ************ */
/* ! ****************************** */
:root{
    /* colors */
    --btn-color: #6ecc84;
    --green-bg-color: #bed5c4;
    --footer-clor: #264e32;

    /* layout */
    --navbar-height: 100px;
    --footer-height: 65px;
    --navbar-width: 270px;
}

/* ! ****************************** */
/* ! GENERALS ********************* */
/* ! ****************************** */
html{
    -webkit-tap-highlight-color: transparent;
    /* scroll-behavior: smooth; */
}

body{
    font-family: sans-serif;
}

body.wait,
body.wait *,
body.wait *:hover{
    cursor: wait !important;
}

.container{
    max-width: 550px;
    margin: 0 auto;
    height: 100%;
}

a{
    color: black;
}

h1{
    font-family: serif;
    color: var(--footer-clor);
    font-size: 3rem;
    margin-bottom: 20px;
}

h1 > div{
    font-size: 2.5rem;
}

h2{
    font-family: serif;
    font-size: 2rem;
    margin-bottom: 20px;
}

h3{
    color: var(--btn-color);
    font-size: 1.1rem;
    margin-bottom: 10px;
    text-transform: uppercase;
}

h4{
    color: var(--btn-color);
    font-size: 1.2rem;
    margin-bottom: 20px;
}


p{
    line-height: 1.5;
}

.btn{
    display: inline-block;
    padding: 17px 32px;
    background-color: var(--btn-color);
    position: relative;

    overflow: hidden;
    
    font-size: 13px;
    font-weight: bold;
    color: white;

    letter-spacing: 1px;
    text-transform: uppercase;

    transition: background-color 300ms;
}

/* ! ****************************** */
/* ! NAVBAR *********************** */
/* ! ****************************** */
#top-nav{
    height: var(--navbar-height);
    background-color: #fff;

    position: sticky;
    top: 0;
    left: 0;
    z-index: 1;

    box-shadow: 0 0 2px black;
}

#top-nav .container{
    height: 100%;
}

#hdr-logo img{
    max-width: 75%;
    max-height: var(--navbar-height);
}

/* # NAVBAR */
#main-navbar{
    position: absolute;
    top: calc(var(--navbar-height) + 1px);
    left: calc(var(--navbar-width) * -1);

    width: var(--navbar-width);
    height: calc(100vh - var(--navbar-height));
    background-color: white;
    box-shadow: 0 0 2px gray;

    padding: 50px 20px;

    transition: left 300ms;
}

.preload * {
    transition: none !important;
}

#main-navbar li a{
    display: block;
    font-weight: bold;
    padding: 20px 0;
    
    border-bottom: 1px solid lightgray;
    color: black;
    
    transition: color 300ms;
}

#main-navbar li a.active{
    color: var(--btn-color);
}

#main-navbar li a:hover{
    color: var(--btn-color);
}

/* ! ****************************** */
/* ! MAIN ************************* */
/* ! ****************************** */
section, header{
    padding: 60px 20px;
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

/* # HERO */
#hero{
    background-image: url(../img/Hero-background-1024x533.webp);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

#hero img{
    border: 10px solid var(--footer-clor);
    box-shadow: 0 0 10px 10px var(--footer-clor);
    border-radius: 50%;
    background-color: #fff;
    width: 75%;
}

/* # CHI SONO */

/* # COSA ASPETTARSI */
#cosa-aspettarsi{
    background-image: url(../img/cosa-aspettarsi-bg.jpg); 
}

#cosa-aspettarsi figure{
    padding: 0 20% 0 30%;
}

/* # DI COSA MI OCCUPO */
#di-cosa-mi-occupo{
    background-image: url(../img/h4_partern.png);
    position: relative;
    background-size: fill;
}

#di-cosa-mi-occupo:before{
    content: '';
    position: absolute;
    inset: 0;
    background-color: var(--green-bg-color);
    opacity: .85;
}

#di-cosa-mi-occupo > *{
    position: relative;
}

#di-cosa-mi-occupo h2{
    color: var(--footer-clor);
}

#di-cosa-mi-occupo .col{
    flex-basis: 100%;
    background-color: white;
}

#di-cosa-mi-occupo .col-text{
    padding: 2rem 1rem;
}

#di-cosa-mi-occupo .col-text p{
    font-size: .9rem;
}

#di-cosa-mi-occupo .btn{
    margin: 0 auto;
}

/* # CONTATTAMI */
#contattami li{
    margin-bottom: 20px;
    line-height: 1.5rem;
}

#contattami .fa-li{
    color: var(--btn-color);
    font-size: 1.5rem;
}

#contattami hr{
    width: 80px;
    border: none;
    background-color: var(--footer-clor);
    height: 5px;
}

/* * contattami form */
#contattami .col-50.flex-column{
    min-height: 150px;
}

.contact-info{
    display: block;
    border: 1px solid lightgray;
    outline: 0;

    outline: none;
    width: 100%;
    resize: none;
    background-color: white;
    z-index: 0;
    
    padding: 1rem;
    font-family: sans-serif;
}

.contact-info:focus{
    border-color: var(--btn-color);
    box-shadow: 0 2px 9px 2px rgba(0,0,0,.15);
}

#contact-form input{
    height: 18px;
}

#contact-form textarea{
    height: 150px;
}

#contact-form .btn{
    display: inline-block;
    width: 100%;
    height: 50px;
    border: none;
    cursor: pointer;
    transition: opacity 300ms;    
}

#contact-form .btn.unclickable{
    cursor: not-allowed;
    opacity: .5;
}

.iubenda-link{
    display: inline-block;
    color: gray;
    transition: color 300ms
}

.iubenda-link:hover,
.iubenda-link:focus{
    color: orange;
}

#miele-cb{
    visibility: hidden;
    display: none;
}

#contattami sup{
    color: red;
}

input[type="checkbox"]{
    appearance: none;
    vertical-align: middle;
}

input[type="checkbox"]::before{
    content: '\f0c8';
    font: var(--fa-font-regular);
    font-size: 1rem;
    color: lightgray;
}

input[type="checkbox"]:checked::before{
    content: '\f14a';
    font: var(--fa-font-solid);
    color: var(--btn-color);
    font-size: 1rem;
}

input[type="checkbox"]:focus::before,
input[type="checkbox"]:hover::before{
    color: var(--btn-color);
    text-shadow: 0 2px 9px 2px rgba(0,0,0,.15);
}

label[for="norm-cb"]{
    user-select: none;
}

/* # RISPOSTA */
.response{
    padding: 20px;
    border-width: 1px;
    border-style: solid;
    border-radius: 15px;
    font-weight: bold;

    position: relative;

    transition: opacity 500ms;
}

.response::before{
    font: var(--fa-font-solid);
    padding-right: 1rem;
}

.response .fa-xmark{
    cursor: pointer;

    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.response.success{
    color: #0a3622;
    border-color: #a9d2bf;
    background-color: #d1e7dd;
}

.response.success::before{
    content: '\f058';
}

.response.bad{
    color: #664d03;
    border-color: #ffecb2;
    background-color: #fff3cd;
}

.response.bad::before{
    content: '\f06a';
}

/* # CONTATTI */
#contatti{
    background-color: var(--green-bg-color);
    position: relative;
}

#contatti::before{
    position: absolute;
    content: '';
    inset: 0;
    
    background-image: url(../img/footer_right.png);
    background-size: fill;
    background-position: bottom right;
    background-repeat: no-repeat;
}

#contatti img{
    width: 75%;
}

#contatti .map{
    max-width: 100%;
}

#contatti > .col-50:first-child{
    align-self: flex-start;
}

#contatti address{
    font-style: normal;
}

#contatti h4{
    display: inline-block;
    color: var(--footer-clor);
    border-bottom: 2px solid var(--btn-color);
    padding-bottom: 1rem;
    margin-bottom: 2rem;
}

#contatti i{
    color: var(--btn-color);
}

#contatti li{
    margin-bottom: 1rem;
}

#contatti .underline-on-hover a{
    padding-bottom: 2px;
    border-bottom: 1px solid transparent;
    transition: 300ms;
}

#contatti .underline-on-hover a:hover,
#contatti .underline-on-hover a:focus{
    border-color: black;
}

/* ! ****************************** */
/* ! FOOTER *********************** */
/* ! ****************************** */
footer{
    height: var(--footer-height);
    background-color: var(--footer-clor);
    color: white;

    padding: 20px;
}

/* ! ****************************** */
/* ! RESPONSIVE ******************* */
/* ! ****************************** */
/* # tablet */
@media screen and (min-width: 768px) {
    .container{
        max-width: 980px;
    }
    
    #di-cosa-mi-occupo .col{
        flex-basis: calc((100% - 40px) / 2);
    }
}

/* # desktop */
@media screen and (min-width: 992px) {
    .container{
        max-width: 1200px;
    }
    
    #top-nav .container,
    footer .container{
        max-width: 1400px;
    }
    
    #top-nav{
        padding: 0;
    }
    
    /* * navbar switch */
    #hamburger-menu{
        display: none;
    }
    
    #main-navbar{
        position: static;
        width: auto;
        height: auto;
        box-shadow: none;
        padding: 0;
    }
    
    #main-navbar ul{
        display: flex;
    }
    
    #main-navbar li a{
        padding: 20px;
        border: none;
    }
    
    /* # DI COSA MI OCCUPO */
    #di-cosa-mi-occupo .col{
        flex-basis: calc((100% - 40px) / 3);
    }
    
    #formButton{
        margin-top: 0;
    }
    
}

